--- a/_config.yml
+++ b/_config.yml
@@ -53,6 +53,11 @@ defaults:
 # This is default for GitHub Pages sites and cannot be changed.
 highlighter: rouge
 markdown: kramdown
+
+lsi: false
+excerpt_separator: "\n\n"
+incremental: false
+
 kramdown:
   # This is default for GitHub Pages sites and cannot be changed.
   syntax_highlighter: rouge
