--- a/_data/owner/en.yml
+++ b/_data/owner/en.yml
@@ -5,7 +5,7 @@
 brand: "Taehoon"
 
 # text below the brand name
-brand_sub_text: "$site_sample"
+# brand_sub_text: "$site_sample"
 
 # used for seo meta post author (if it's not defined in post)
 name: "Taehoon Kang"
@@ -19,7 +19,7 @@ home:
 
 # about page sub title
 about:
-  sub_title: "$site_sample"
+  # sub_title: "$site_sample"
 
 # if you don't want to add copyright year, comment or leave it blank.
 # the year during which the claimed copyright for the work was first asserted.
@@ -48,8 +48,8 @@ meta_common_description: "Your meta description."
 # the order of the items will be shown as here.
 # comment to remove any contact item
 contacts:
-  #- github: ""
-  #- email: ""
+  - github: "taehoonkange"
+  - email: "sls97117@gmail.com"
   #- linkedin: ""
   #- twitter: ""
   #- mastodon: ""
