--- a/_data/owner/en.yml
+++ b/_data/owner/en.yml
@@ -49,7 +49,7 @@ meta_common_description: "Your meta description."
 # comment to remove any contact item
 contacts:
   - github: "taehoonkange"
-  - email: "sls97117@gmail.com"
+  - email: "rhkth96@gmail.com"
   #- linkedin: ""
   #- twitter: ""
   #- mastodon: ""
