--- a/_data/conf/main.yml
+++ b/_data/conf/main.yml
@@ -267,10 +267,10 @@ meta:
   # if you enabled add_hreflang in sitemap.xml, make this false. (According to SEO pros, prevent using both. )
   hreflang: true
   # add published date and modified date
-  add_meta_date: false
+  add_meta_date: true
   # please note that google does not use keywords, but other search engines may.
   keywords: true
-  google_site_verify: false
+  google_site_verify: true
   twitter_card: true
   open_graph: true
   open_graph_locale: true
