--- a/_data/owner/en.yml
+++ b/_data/owner/en.yml
@@ -81,7 +81,7 @@ google_analytics_id: ""
 # there are different ways to verify web page. One is adding this as meta into html.
 # make sure you set meta.google_site_verify: true in _data/conf/main.yml
 # make sure your environment does not match with google.site_verification.ignore in _data/conf/main.yml
-google_site_verification: ""
+google_site_verification: "googlee5b5fc9e48830cd4.html"
 
 # make sure you set contact_form.enable: true in _data/conf/main.yml
 # - Create a form in Google Forms. You can use the template named "Contact Information".
